--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-google-maps-api": "^1.0.8",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
