--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
 [build]
-  command = "npm run build"
-  publish = "dist"  # or the directory where your build artifacts are located
-  node_version = "9.8.1"
+  command = "npm install --force --legacy-peer-deps && npm run build"
+  publish = "build"  # or the directory where your build artifacts are located
