--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "npm install --force --legacy-peer-deps && npm run build"
+  command = "npm install --force && npm run build"
   publish = "build"  # or the directory where your build artifacts are located
