--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,2 @@
 [build]
-  command = "npm install --force && npm run build"
-  publish = "build"  # or the directory where your build artifacts are located
+  command = "npm run build"
